# arkparser

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  KNOWN_ISSUES.md  LICENSE  README.md  pyproject.toml
arkparser/: __init__.py  data_models.py  export.py
arkparser/common/: __init__.py  binary_reader.py  exceptions.py  map_config.py  normalization.py  types.py  version_detection.py
arkparser/files/: __init__.py  base.py  cloud_inventory.py  profile.py  tribe.py  world_save.py
arkparser/game_objects/: __init__.py  container.py  game_object.py  location.py
arkparser/models/: __init__.py  character.py  creature.py  item.py  player.py  stats.py  structure.py  tribe.py
arkparser/properties/: __init__.py  base.py  byte_property.py  compound.py  primitives.py  registry.py
arkparser/structs/: __init__.py  base.py  colors.py  misc.py  property_list.py  registry.py  vectors.py
tests/: __init__.py  conftest.py  golden_manifest.py  golden_targets.py  test_asa_header_position.py  test_asa_name_table.py  test_asa_profile_drop.py  test_ase_cluster_drift.py  test_binary_reader.py  test_binary_reader_layouts.py  test_cloud_export.py  test_cloud_inventory.py  test_cryopod_export.py  test_current_stats.py  test_data_models.py  test_export.py  test_game_objects.py  test_golden_exports.py  test_lazy_properties.py  test_profile.py  test_review_fixes.py  test_tribe.py  test_v13_property_layouts.py  test_version_detection.py  test_world_save.py
tests/golden/: asa_aberration_wp.json  asa_extinction_wp.json  asa_ragnarok_wp.json  asa_scorchedearth_wp.json  asa_thecenter_wp.json  asa_theisland_wp.json  asa_valguero_wp.json  ase_aberration.json  ase_extinction.json  ase_fjordur.json  ase_lostisland.json  ase_ragnarok.json  ase_scorchedearth.json  ase_thecenter.json  ase_theisland.json  ase_valguero.json  ase_vertydome.json
