[project]
name = "arkparser"
version = "0.5.1"
description = "Pure-Python parser for ARK savegame files (ASE + ASA), drop-in replacement for the legacy ASVExport.exe."
requires-python = ">=3.10"
authors = [{ name = "Vert" }]
readme = "README.md"
license = { text = "MIT" }
dependencies = []

[tool.setuptools.packages.find]
include = ["arkparser*"]

[project.urls]
Homepage = "https://github.com/vertyco/arkparser"
